Corrected scrollbar

--- a/projects.css
+++ b/projects.css
@@ -1,6 +1,6 @@
 /* SCROLL BAR START */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 /* Track */
@@ -10,7 +10,7 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #ed1c24;
+  background: #222;
 }
 
 /* Handle on hover */
